# blockchain-play

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod
chain/: BUILD.bazel  block.go  chain.go  chain_test.go  proof.go
main/: BUILD.bazel  main.go
